# context-compat

./: Cargo.toml  Makefile  NOTICE  README.md
fixtures/v0/caches/future_version/: index.json  manifest.json
fixtures/v0/caches/minimal/: index.json  manifest.json
fixtures/v0/caches/minimal/documents/: 64ec88ca00b2.json  b4dabda568d0.json
fixtures/v0/caches/realistic/: index.json  manifest.json
fixtures/v0/caches/tie_break/: index.json  manifest.json
fixtures/v0/caches/tie_break/documents/: a17ecc513871.json  de76aaf348db.json
fixtures/v0/documents/edge_cases/: large.md  repeated_terms.md  unicode.md
fixtures/v0/documents/tie_break/: a.md  b.md
fixtures/v0/expected/: inspect_minimal.json  inspect_realistic.json  mcp_error_cache_missing.json  minimal_basic.json  minimal_zero_budget.json  realistic_basic.json  realistic_multi_term.json  tie_break_ordering.json  tie_break_zero_score.json
fixtures/v0/queries/: basic.json  empty_query.json  multi_term.json  no_match.json  tight_budget.json  zero_budget.json
schemas/: inspect_output.schema.json  list_caches.schema.json  mcp_error.schema.json  selection_result.schema.json
src/: cli_runner.rs  fixture.rs  lib.rs  mcp_runner.rs
tests/: backward_compat.rs  cross_version.rs  determinism.rs  golden_outputs.rs  protocol_compat.rs  schema_validation.rs  selection_semantics.rs
